--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://christiennelinton:<m0ng0acc>@cluster0.wsjdxys.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI="mongodb+srv://christiennelinton:m0ng0acc@cluster0.wsjdxys.mongodb.net/otbstore?retryWrites=true&w=majority"
 SECRET=alskdfjklslf
